# drdo-interiit22

./: CMakeLists.txt  README.md  car_messages  control2.cpp  cross_track_error_world1.npy  cte1.npy  cte2.npy  graph_nodes.npy  package.xml  take_odom2.py  transform.py  ugv_waypoints.npy
car_messages/: CMakeLists.txt  detector.py  package.xml
launch/: drdo_world1.launch  drdo_world1_phase1.launch  drdo_world1_phase2.launch  drdo_world2.launch  drdo_world2_phase1.launch  drdo_world2_phase2.launch  drdo_world3.launch
models/gimbal_small_2d/: model.sdf
msg/: customMessage.msg
rviz/: myConfg.rviz  myconfig_controls.rviz
scripts/: launch_world1.sh  launch_world1_phase1.sh  launch_world1_phase2.sh  launch_world2.sh  launch_world2_mesh.sh  launch_world2_phase1.sh  launch_world2_phase2.sh  launch_world3.sh  mpc_test.sh  path_followed.npy  ugv_waypoints.npy
src/Controller/: Full_World1_RUN.npy  car_respawner.py  car_respawner_world2.py  cross_track_error_world1.npy  drone_respawner.py  half_path_final_world1.npy  (+20 more)
world/: drdo_world1.world  drdo_world1_mesh.world  drdo_world2.world  drdo_world2_mesh.world
world_paths/: cube.urdf  path_taken_world1_gazebo_coord.npy  read_npy.ipynb  spawn_path.py  spawn_path2.py  take_odom2.py  transform.py  world1_gazebo_rohitS.npy  world1_given.npy  world1_local_rohitS.npy  world2.npy  world2_gazebo_prev.npy  world2_gazebo_rohitS.npy  world2_gazebo_rohitS_run2.npy  world2_gazebo_rohitS_run3.npy  world2_gazebo_satwik.npy  world2_given.npy  world2_local_satwik.npy  world2_local_satwik_run3.npy  world2_run2.npy  world3_gazebo_prev.npy
(+24 files in other folders)
